[gd_scene load_steps=15 format=3 uid="uid://cq3i5jaiywfx3"]

[ext_resource type="Texture2D" uid="uid://dovc2wa6ykgcj" path="res://Assets/chest/wooden_chest.tres" id="1_nnbbr"]
[ext_resource type="Script" path="res://Scene/chest.gd" id="1_pf8fo"]
[ext_resource type="Texture2D" uid="uid://csyk1tyuscq7q" path="res://Assets/Pirate Treasure/Silver Coin/01.png" id="3_f3jkc"]
[ext_resource type="Texture2D" uid="uid://ceye6ig20s7ls" path="res://Assets/Pirate Treasure/Gold Coin/01.png" id="4_2cjn0"]
[ext_resource type="Texture2D" uid="uid://d23i8q3kpy6xp" path="res://Assets/Pirate Treasure/Blue Diamond/01.png" id="5_fypr5"]

[sub_resource type="Animation" id="Animation_8sgcy"]
resource_name = "open"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:vframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Particles1:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Particles2:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Particles3:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_vhmif"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:vframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Particles1:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Particles2:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Particles3:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y14jp"]
_data = {
"RESET": SubResource("Animation_vhmif"),
"open": SubResource("Animation_8sgcy")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rsx8j"]
size = Vector2(26, 30)

[sub_resource type="Curve" id="Curve_53n7d"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.257463, 1), 0.0, 0.0, 0, 0, Vector2(0.839552, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_2wq17"]
curve = SubResource("Curve_53n7d")

[sub_resource type="Curve" id="Curve_jdeu1"]
_data = [Vector2(0, 0.230769), 0.0, 0.0, 0, 0, Vector2(0.270833, 0.901099), 0.0, 0.0, 0, 0, Vector2(0.640625, 0.923077), 0.0, 0.0, 0, 0, Vector2(1, 0.648352), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_5v52t"]
curve = SubResource("Curve_jdeu1")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_k2iia"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
initial_velocity_min = 80.0
initial_velocity_max = 100.0
gravity = Vector3(0, 98, 0)
scale_curve = SubResource("CurveTexture_5v52t")
alpha_curve = SubResource("CurveTexture_2wq17")

[node name="Chest" type="Node2D"]
position = Vector2(95, 121)
script = ExtResource("1_pf8fo")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_nnbbr")
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y14jp")
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_rsx8j")

[node name="Particles1" type="GPUParticles2D" parent="."]
emitting = false
process_material = SubResource("ParticleProcessMaterial_k2iia")
texture = ExtResource("3_f3jkc")
lifetime = 1.8
one_shot = true
explosiveness = 0.9

[node name="Particles2" type="GPUParticles2D" parent="."]
emitting = false
process_material = SubResource("ParticleProcessMaterial_k2iia")
texture = ExtResource("4_2cjn0")
lifetime = 1.8
one_shot = true
explosiveness = 0.9

[node name="Particles3" type="GPUParticles2D" parent="."]
emitting = false
process_material = SubResource("ParticleProcessMaterial_k2iia")
texture = ExtResource("5_fypr5")
lifetime = 1.8
one_shot = true
explosiveness = 0.9

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
